# libremk_platform

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  appveyor.yml
example/: .gitignore  CMakeLists.txt  http_client.cpp
include/remk/: platform.h  platform.hpp
include/remk/platform/: aaa_base.h  context.h  context.hpp  errno.h  netdb.h  platform.h  platform.hpp  select.h  socket.h  sugar.h  time.h  uio.h
lib/remk/platform/: context.cpp  netdb.cpp  select.cpp  time.cpp
src/: context.cpp  errno.cpp  netdb.cpp  platform.cpp  select.cpp  socket.cpp  strcasecmp.c  strtonum.c  strtonum.h  sugar.cpp  time.cpp  uio.cpp  utf8_decode.c
src/remk/platform/: context.cpp  errno.cpp  select.cpp  socket.cpp  time.cpp
